--- a/StartPage.html
+++ b/StartPage.html
@@ -56,7 +56,7 @@
         #body {
             width: 100%;
             height: 100%;
-/*             background-repeat: ; */
+            background-repeat: repeat-y;
             /* background-image: url(./Resourses/Library/Plot_Pics/Sky\ And\ The\ Sea.png); */
             background-size: 100%;
         }
