--- a/StartPage.html
+++ b/StartPage.html
@@ -54,7 +54,7 @@
 
     <style>
         #body {
-            width: auto;
+            width: device-width;
             height: 100%;
             background-repeat: repeat-y;
             /* background-image: url(./Resourses/Library/Plot_Pics/Sky\ And\ The\ Sea.png); */
