--- a/StartPage.html
+++ b/StartPage.html
@@ -221,7 +221,7 @@
                         } else {
                             clearInterval(fadeOutInterval);
                             audio.pause(); // 停止音乐
-                            window.location.href = "./Resourses/OSInterface.html"; // 跳转到下一个页面
+                            window.location.href = "https://cxhakatsuki.github.io/Super-Simple-Website/Resourses/OSInterface.html"; // 跳转到下一个页面
                         }
                     }, 200); // 音乐淡出的间隔时间
 
