--- a/StartPage.html
+++ b/StartPage.html
@@ -76,11 +76,13 @@
             }
             @media screen and (max-width: 600px) {
                 #Title_Content {
+                    top: 50px;
                     font-size: 30px;
                 }
             }
             @media screen and (min-width: 600px) {
                 #Title_Content {
+                    top: 200px;
                     font-size: 115px;
                 }
             }
@@ -131,7 +133,7 @@
         Title_Content.style.height = "768px"
         // Title_Content.style.fontSize = "115px"
         Title_Content.style.position = "relative"
-        Title_Content.style.top = "200px"
+        // Title_Content.style.top = "200px"
         Title_Content.style.margin = "0px auto"
         Title_Content.style.textAlign = "center"
         Title_Content.style.resize = "none"
