--- a/StartPage.html
+++ b/StartPage.html
@@ -76,7 +76,7 @@
             }
             @media screen and (max-width: 600px) {
                 #Title_Content {
-                    top: 50px;
+                    top: 200px;
                     font-size: 30px;
                 }
             }
@@ -98,22 +98,36 @@
             }
             @media screen and (max-width: 600px) {
                 #Hint_Content {
+                    top:-500px;
                     font-size: 25px;
                 }
             }
             @media screen and (min-width: 600px) {
                 #Hint_Content {
+                    top: -400px;
                     font-size: 40px;
                 }
             }
             @media screen and (max-width: 600px) {
                 #Reminder {
+                    top:-227px;
                     font-size: 15px;
                 }
             }
             @media screen and (min-width: 600px) {
                 #Reminder {
+                    top:-100px;
                     font-size: 25px;
+                }
+            }
+            @media screen and (max-width: 600px) {
+                #Start_Button {
+                    top: -287px;
+                }
+            }
+            @media screen and (min-width: 600px) {
+                #Start_Button {
+                    top: -167px;
                 }
             }
         
@@ -157,7 +171,7 @@
         // Hint_Content.style.fontSize = "40px"
         Hint_Content.style.color = "black"
         Hint_Content.style.position = "relative"
-        Hint_Content.style.top = "-400px"
+        // Hint_Content.style.top = "-400px"
         Hint_Content.style.margin = "0px auto"
         Hint_Content.style.textAlign = "center"
         Hint_Content.style.resize = "none"
@@ -209,7 +223,7 @@
                 Start_Button.style.height = "40px"
                 Start_Button.style.fontSize = "30px"
                 Start_Button.style.position = "relative"
-                Start_Button.style.top = "-167px"
+                // Start_Button.style.top = "-167px"
                 Start_Button.style.margin = "0px auto"
                 Start_Button.style.textAlign = "center"
                 Start_Button.style.resize = "none"
@@ -248,7 +262,7 @@
                 Reminder.style.color = "white"
                 Reminder.style.textShadow = "1px 1px 1px rgba(0,0,0,0.5)"
                 Reminder.style.position = "relative"
-                Reminder.style.top = "-100px"
+                // Reminder.style.top = "-100px"
                 Reminder.style.margin = "0px auto"
                 Reminder.style.textAlign = "center"
                 Reminder.style.resize = "none"
