--- a/Resourses/OSInterface.html
+++ b/Resourses/OSInterface.html
@@ -37,7 +37,7 @@
 
     <style>
         #Screen {
-            width: (device-width) * 0.9;
+            width: 1024px;
             height: 768px;
             background-image: url(./Library/Background.jpg);
             background-size: cover;
